# kshitij-RL

./: .gitignore  README.md  main.py  pyproject.toml
core_rl/: __init__.py
core_rl/agents/: __init__.py  base_agent.py  continuous_spo.py  discrete_spo.py  ppo.py  vanilla_dqn.py
core_rl/buffers/: __init__.py  base_buffer.py  continuous_spo_rollout_buffer.py  discrete_spo_rollout_buffer.py  replay_buffer.py  rollout_buffer.py
core_rl/networks/: __init__.py  cnn.py  mlp.py
core_rl/runners/: __init__.py  continuous_spo_runner.py  discrete_spo_runner.py  off_policy.py  on_policy.py  spo_runner.py
core_rl/trainers/: __init__.py  common.py  continuous_spo_trainer.py  discrete_spo_trainer.py  dqn_trainer.py  ppo_trainer.py  spo_trainer.py
core_rl/utils/: __init__.py  logger.py  metrics.py
tests/: conftest.py  test_continuous_spo_agent.py  test_continuous_spo_buffer.py  test_ppo_agent.py  test_replay_buffer.py  test_rollout_buffer.py  test_spo_agent.py  test_spo_buffer.py
