[project]
name = "kshitij-rl"
version = "0.1.0"
description = "Modular reinforcement learning library scaffold with DQN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pytest>=9.0.2",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
